# Unreleased
 * Bug fixes and optimizations
 * optimize performance of docker dev build speed and create container on dockerhub
 * Bug Fixes and typo fix and add user_id into token.
 * Fix User Authentication Error handling.
 * remove space from status_id and status_message response json to avoid future bugs.
 * Add header var "Enable-data-integrity-check : true" to toggle sha256sum payload verification.
 * Add changelog.txt.
 * Tweak Database container healthcheck for speed.
 * Disable building of tools and examples of dependencies to speed build from source.
 * Update CMakefile.txt.
 * Adjust includes with recent upstream changes to fmt lib.
 * switch cpm package from git based to pkg based to improve buid speed and save bandwidth.

# Version 0.1