@@ -1,6 +1,6 @@
 #include "api_v1_routes.hpp"
 
-API_V1_Routes::API_V1_Routes(std::shared_ptr<crow::App<crow::CORSHandler, ElapsedTime, Authentication, Authorization, Search, DataIntegrity>> app, std::shared_ptr<UserController> userController, std::shared_ptr<PatientController> patientController)
+API_V1_Routes::API_V1_Routes(std::shared_ptr<crow::App<crow::CORSHandler, ElapsedTime, Authentication, Authorization, Search, DataIntegrity, GetPatientVerifier>> app, std::shared_ptr<UserController> userController, std::shared_ptr<PatientController> patientController)
 {
     ////////////////   ROUTES   ////////////////////
     CROW_ROUTE((*app), "/v1/user")
@@ -22,9 +22,9 @@ API_V1_Routes::API_V1_Routes(std::shared_ptr<crow::App<crow::CORSHandler, Elapse
         });
 
     CROW_ROUTE((*app), "/v1/patient")
-        .CROW_MIDDLEWARES(*app, ElapsedTime, Authorization)
-        .methods(crow::HTTPMethod::GET)([patientController](const crow::request& req, crow::response& res) {
-            patientController->read_patient(std::ref(req), std::ref(res));
+        .CROW_MIDDLEWARES(*app, ElapsedTime, Authorization, GetPatientVerifier)
+        .methods(crow::HTTPMethod::GET)([patientController, app](const crow::request& req, crow::response& res) {
+            patientController->read_patient(std::ref(req), std::ref(res), app->get_context<GetPatientVerifier>(req).criteria);
         });
 
     CROW_ROUTE((*app), "/v1/patient")
