@@ -1,0 +1,53 @@
+#pragma once
+
+#include <crow.h>
+#include <jsoncons/json.hpp>
+
+struct GetPatientVerifier : crow::ILocalMiddleware {
+
+private:
+    const std::string xRequestHeader = "X-Request";
+
+public:
+    struct context {
+        jsoncons::json criteria;
+    };
+
+    GetPatientVerifier() = default;
+    ~GetPatientVerifier() = default;
+
+    void before_handle(crow::request& req, crow::response& res, context& ctx)
+    {
+        if (!(req.headers.contains(xRequestHeader) || req.get_header_value(xRequestHeader).empty())) {
+            res.code = 400;
+            res.end();
+            return;
+        }
+        try {
+            std::string decoded;
+            std::optional<std::string> encoded = req.get_header_value(xRequestHeader);
+
+            if (!encoded) {
+                res.code = 400;
+                res.end();
+                return;
+            }
+
+            jsoncons::decode_base64(encoded.value().begin(), encoded.value().end(), decoded);
+
+            ctx.criteria = jsoncons::json::parse(decoded);
+
+        } catch (const std::exception& e) {
+            res.code = 500;
+            res.end();
+            return;
+        }
+    }
+
+    void after_handle(crow::request& req, crow::response& res, context& ctx)
+    {
+        (void)req;
+        (void)res;
+        (void)ctx;
+    }
+};
