@@ -15,7 +15,9 @@ Server::Server(uint16_t srv_threads, uint16_t db_connections)
     , authentication(std::make_shared<Authentication>())
     , authorization(std::make_shared<Authorization>(tokenizer))
     , dataIntegrity(std::make_shared<DataIntegrity>())
-    , app(std::make_shared<crow::App<crow::CORSHandler, ElapsedTime, Authentication, Authorization, Search, DataIntegrity>>(*elapsedTime, *authentication, *authorization, *search, *dataIntegrity))
+    , search(std::make_shared<Search>())
+    , getpatientverifier(std::make_shared<GetPatientVerifier>())
+    , app(std::make_shared<crow::App<crow::CORSHandler, ElapsedTime, Authentication, Authorization, Search, DataIntegrity, GetPatientVerifier>>(*elapsedTime, *authentication, *authorization, *search, *dataIntegrity, *getpatientverifier))
     , routes(std::make_shared<API_V1_Routes>(app, userController, patientController))
     , srv_threads(srv_threads)
 {
